# BigML

./: README.md  aligning_hitbtc_timestamps.ipynb  analyzing dataset.ipynb  benchmark.ipynb  clustering other parameters.ipynb  clustering.ipynb  testing on synthetic data.ipynb  time measurement.ipynb
report/: report.tex
src/: CMakeLists.txt  F.cpp  F.h  F_optimize.cpp  F_optimize.h  F_test.cpp  W.cpp  W.h  W_optimize.h  W_test.cpp  X.cpp  X.h  X_test.cpp  cg_test.cc  cg_test.cpp  conjugated_gradients.cpp  conjugated_gradients.h  factor.cpp  factor.h  factor_test.cpp  main.cpp  predict.cpp  predict.h
src/collecting_hitbtc_data/: config.json  maining_data_2.py  market.py  utils.py
src/simplest_bots_no_machine_learning/: CrossectionBot.py  ExchangeSimulator.py  MovingAverageBot.py  RandomBot.py
tests/: W_optimize_test.cpp
